feat&fix: ComfyUI 0.0.9 Update (#892)
* add list_models node

* add img2img node

* rename stable_diffusion node to txt2img

* add img2img.json

* register txt2img, img2img and list_models node

* bugfix

* add depth_anything and depth_pro

* Merge pull request #2 from yt-koike/2vid

add img2img and img2vid

* verify samplers and schedulers

* refactor

* refactor

* prompt installing depth related plugins on ComfyUI

* version up dify_plugin

* add ja_JP

* tune img2vid

* add face_swap feature

* add install prompt

* bugfix & add ja_JP translations

* refactor

* add translation

* bump: comfyui to 0.0.9

* format fix

* add upscale feature

--- a/tools/comfyui/provider/comfyui.yaml
+++ b/tools/comfyui/provider/comfyui.yaml
@@ -38,8 +38,11 @@ tools:
 - tools/comfyui_txt2img.yaml
 - tools/comfyui_img2img.yaml
 - tools/comfyui_img2vid.yaml
+- tools/comfyui_upscale.yaml
 - tools/comfyui_depth_anything.yaml
 - tools/comfyui_depth_pro.yaml
 - tools/comfyui_face_swap.yaml
 - tools/comfyui_list_models.yaml
 - tools/comfyui_list_samplers.yaml
+- tools/comfyui_list_upscalers.yaml
+- tools/comfyui_image_info.yaml
