--- a/tools/comfyui/tools/comfyui_img2img.yaml
+++ b/tools/comfyui/tools/comfyui_img2img.yaml
@@ -1,15 +1,12 @@
 description:
   human:
     en_US:
-      a pre-defined comfyui workflow that can use one model and up to 3 loras
-      to generate images. Support SD1.5, SDXL, SD3 and FLUX which contain text encoders/clip,
-      but does not support models that requires a triple clip loader.
+      Edits an given image with the prompt.
     pt_BR:
-      a pre-defined comfyui workflow that can use one model and up to 3 loras
-      to generate images. Support SD1.5, SDXL, SD3 and FLUX which contain text encoders/clip,
-      but does not support models that requires a triple clip loader.
-    zh_Hans: 一个预定义的 ComfyUI 工作流，可以使用一个模型和最多3个loras来生成图像。支持包含文本编码器/clip的SD1.5、SDXL、SD3和FLUX，但不支持需要clip加载器的模型。
-  llm: draw the image you want based on your prompt.
+      Edits an given image with the prompt.
+    zh_Hans: 按提示编辑给定图像。
+    ja_JP: プロンプトにもとづいて画像を編集します．
+  llm: edits an given image as you want based on your prompt.
 extra:
   python:
     source: tools/comfyui_img2img.py
@@ -18,7 +15,8 @@ identity:
   label:
     en_US: Img2Img
     pt_BR: Img2Img
-    zh_Hans: Img2Img
+    zh_Hans: 图像到图像
+    ja_JP: 画像to画像
   name: img2img
 
 parameters:
@@ -32,10 +30,12 @@ parameters:
         Image prompt, you can check the official documentation of Stable Diffusion
         or FLUX
       zh_Hans: 图像提示词，您可以查看 Stable Diffusion 或者 FLUX 的官方文档
+      ja_JP: プロンプト．Stable Diffusion や FLUX の公式ドキュメントをご参照ください。
     label:
       en_US: Prompt
       pt_BR: Prompt
       zh_Hans: 提示词
+      ja_JP: プロンプト
     llm_description:
       Image prompt of Stable Diffusion, you should describe the image
       you want to generate as a list of words as possible as detailed, the prompt must
@@ -48,13 +48,15 @@ parameters:
     label:
       en_US: Input Image
       zh_Hans: 输入的图片
+      ja_JP: 入力画像
     llm_description:
       The input image, used to transfer to the comfyui workflow to generate
       another image.
       If input is array of image, the first one will be used.
     human_description:
-      en_US: The input image
-      zh_Hans: 输入的图片
+      en_US: The input image. If input is array of image, the first one will be used.
+      zh_Hans: 输入的图片。如果输入是图像数组，将使用第一个图像。
+      ja_JP: 入力画像. もしファイル配列を与えた場合，最初の画像のみ読みます．
     required: true
     type: files
 
@@ -64,10 +66,12 @@ parameters:
       en_US: Model Name
       pt_BR: Model Name
       zh_Hans: 模型名称
+      ja_JP: モデル名
     label:
       en_US: Model Name
       pt_BR: Model Name
       zh_Hans: 模型名称
+      ja_JP: モデル名
     required: true
     type: string
 
@@ -77,10 +81,12 @@ parameters:
       en_US: Steps
       pt_BR: Steps
       zh_Hans: Steps
+      ja_JP: ステップ数
     label:
       en_US: Steps
       pt_BR: Steps
       zh_Hans: Steps
+      ja_JP: ステップ数
     required: false
     type: number
 
@@ -91,10 +97,12 @@ parameters:
       en_US: Negative prompt
       pt_BR: Negative prompt
       zh_Hans: Negative prompt
+      ja_JP: ネガティブプロンプト
     label:
       en_US: Negative prompt
       pt_BR: Negative prompt
       zh_Hans: Negative prompt  
+      ja_JP: ネガティブプロンプト
     required: false
     type: string
 
@@ -105,10 +113,12 @@ parameters:
       en_US: CFG Scale
       pt_BR: CFG Scale
       zh_Hans: 提示词相关性(CFG Scale)
+      ja_JP: CFG スケール
     label:
       en_US: CFG Scale
       pt_BR: CFG Scale
       zh_Hans: CFG Scale
+      ja_JP: CFG スケール
     required: false
     type: number
 
@@ -116,13 +126,15 @@ parameters:
     default: 0.8
     form: llm
     human_description:
-      en_US: Denoise Ratio
-      pt_BR: Denoise Ratio
-      zh_Hans: Denoise Ratio
+      en_US: Denoise Ratio (0.0~1.0)
+      pt_BR: Denoise Ratio (0.0~1.0)
+      zh_Hans: Denoise Ratio (0.0~1.0)
+      ja_JP: ノイズ除去比 (0.0~1.0)
     label:
       en_US: Denoise Ratio
       pt_BR: Denoise Ratio
       zh_Hans: Denoise Ratio
+      ja_JP: ノイズ除去比
     required: false
     type: number
 
@@ -133,10 +145,12 @@ parameters:
       en_US: Sampling method
       pt_BR: Sampling method
       zh_Hans: Sampling method
+      ja_JP: サンプリング手法
     label:
       en_US: Sampling method
       pt_BR: Sampling method
       zh_Hans: Sampling method
+      ja_JP: サンプリング手法
     required: true
     type: string
 
@@ -147,9 +161,11 @@ parameters:
       en_US: Scheduler
       pt_BR: Scheduler
       zh_Hans: Scheduler
+      ja_JP: スケジューラー
     label:
       en_US: Scheduler
       pt_BR: Scheduler
       zh_Hans: Scheduler
+      ja_JP: スケジューラー
     required: true
     type: string
