--- a/tools/comfyui/tools/comfyui_depth_pro.yaml
+++ b/tools/comfyui/tools/comfyui_depth_pro.yaml
@@ -5,6 +5,7 @@ description:
     pt_BR:
       A foundation model for zero-shot metric monocular depth estimation developed by Apple. https://github.com/spacepxl/ComfyUI-Depth-Pro
     zh_Hans: Apple 所開發的零拍公制單眼深度估計基礎模型。https://github.com/spacepxl/ComfyUI-Depth-Pro
+    ja_JP: Apple 社によって開発されたゼロショット・メトリック単眼深度推定の基礎モデル https://github.com/spacepxl/ComfyUI-Depth-Pro
   llm: estimates depth of a regular RGB image
 extra:
   python:
@@ -15,6 +16,7 @@ identity:
     en_US: Depth Pro
     pt_BR: Depth Pro
     zh_Hans: Depth Pro
+    ja_JP: Depth Pro
   name: depth_pro
 
 parameters:
@@ -23,11 +25,13 @@ parameters:
     label:
       en_US: Input Image
       zh_Hans: 输入的图片
+      ja_JP: 入力画像
     llm_description:
       The input image. If input is array of image, the first one will be used.
     human_description:
-      en_US: The input image
-      zh_Hans: 输入的图片
+      en_US: The input image. If input is array of image, the first one will be used.
+      zh_Hans: 输入的图片。如果输入是图像数组，将使用第一个图像。
+      ja_JP: 入力画像. もしファイル配列を与えた場合，最初の画像のみ読みます．
     required: true
     type: files
     
@@ -39,10 +43,12 @@ parameters:
       pt_BR:
         Precision of the model
       zh_Hans: 模型的精度
+      ja_JP: モデル精度
     label:
       en_US: precision
       pt_BR: precision
       zh_Hans: 精度
+      ja_JP: 精度
     required: true
     type: select
     options:
