--- a/tools/comfyui/tools/comfyui_face_swap.yaml
+++ b/tools/comfyui/tools/comfyui_face_swap.yaml
@@ -5,6 +5,7 @@ description:
     pt_BR:
       Face swap. Infuses a face on the second image to the first image.
     zh_Hans: 换脸。将第二张图片上的人脸注入第一张图片。
+    ja_JP: 1枚目に写った顔を2枚目の画像に写します．
   llm: swap faces
 extra:
   python:
@@ -15,6 +16,7 @@ identity:
     en_US: FaceSwap
     pt_BR: FaceSwap
     zh_Hans: FaceSwap
+    ja_JP: FaceSwap
   name: face_swap
 
 parameters:
@@ -23,11 +25,12 @@ parameters:
     label:
       en_US: Input Image
       zh_Hans: 输入的图片
+      ja_JP: 入力画像
     llm_description:
-      The input images.
-      If input is array of image, the first two will be used.
+      The input images. If input is array of image, the first two will be used.
     human_description:
-      en_US: The input image
-      zh_Hans: 输入的图片
+      en_US: The input image. If input is array of image, the first one will be used.
+      zh_Hans: 输入的图片。如果输入是图像数组，将使用第一个图像。
+      ja_JP: 入力画像. もしファイル配列を与えた場合，最初の2画像のみ読みます．
     required: true
     type: files
