feat:support google image search (#893)
* feat:support google image search

* feat:support google image search

---------

Co-authored-by: hobo.l <hobo.l@binance.com>

--- a/tools/google/provider/google.yaml
+++ b/tools/google/provider/google.yaml
@@ -31,6 +31,7 @@ credentials_for_provider:
     url: https://serpapi.com/manage-api-key
 tools:
   - tools/google_search.yaml
+  - tools/google_image_search.yaml
 extra:
   python:
     source: provider/google.py
