--- a/models/gitee_ai/provider/gitee_ai.yaml
+++ b/models/gitee_ai/provider/gitee_ai.yaml
@@ -1,4 +1,5 @@
 configurate_methods:
+  - customizable-model
   - predefined-model
 description:
   en_US: 快速体验大模型，领先探索 AI 开源世界
@@ -24,7 +25,7 @@ icon_small:
   en_US: Gitee-AI-Logo.svg
 label:
   en_US: Gitee AI
-  zh_Hans: Gitee AI
+  zh_Hans: 模力方舟
 models:
   llm:
     position: models/llm/_position.yaml
@@ -57,6 +58,60 @@ provider_credential_schema:
       required: true
       type: secret-input
       variable: api_key
+model_credential_schema:
+  credential_form_schemas:
+  - label:
+      en_US: API Key
+    placeholder:
+      en_US: Enter your API Key
+      zh_Hans: 在此输入您的 API Key
+    required: true
+    type: secret-input
+    variable: api_key
+  - default: '4096'
+    label:
+      en_US: Model context size
+      zh_Hans: 模型上下文长度
+    placeholder:
+      en_US: Enter your Model context size
+      zh_Hans: 在此输入您的模型上下文长度
+    required: true
+    type: text-input
+    variable: context_size
+  - default: '4096'
+    label:
+      en_US: Upper bound for max tokens
+      zh_Hans: 最大 token 上限
+    show_on:
+    - value: llm
+      variable: __model_type
+    type: text-input
+    variable: max_tokens
+  - default: no_call
+    label:
+      en_US: Function calling
+    options:
+    - label:
+        en_US: Not Support
+        zh_Hans: 不支持
+      value: no_call
+    - label:
+        en_US: Support
+        zh_Hans: 支持
+      value: function_call
+    required: false
+    show_on:
+    - value: llm
+      variable: __model_type
+    type: select
+    variable: function_calling_type
+  model:
+    label:
+      en_US: Model Name
+      zh_Hans: 模型名称
+    placeholder:
+      en_US: Enter your model name
+      zh_Hans: 输入模型名称
 supported_model_types:
   - llm
   - text-embedding
