chore: upd siliconflow parameters (#923)
* chore: upd siliconflow parameters

* chore: Bump version to 0.0.13

--- a/models/siliconflow/models/llm/deepseek-r1-distill-qwen-7B.yaml
+++ b/models/siliconflow/models/llm/deepseek-r1-distill-qwen-7B.yaml
@@ -4,7 +4,9 @@ label:
   en_US: deepseek-ai/DeepSeek-R1-Distill-Qwen-7B
 model_type: llm
 features:
+  - multi-tool-call
   - agent-thought
+  - stream-tool-call
 model_properties:
   mode: chat
   context_size: 32000
