--- a/models/siliconflow/models/llm/deepseek-v3.yaml
+++ b/models/siliconflow/models/llm/deepseek-v3.yaml
@@ -3,7 +3,9 @@ label:
   en_US: deepseek-ai/DeepSeek-V3
 model_type: llm
 features:
+  - multi-tool-call
   - agent-thought
+  - stream-tool-call
 model_properties:
   mode: chat
   context_size: 64000
