--- a/models/siliconflow/models/llm/glm4-9b-chat.yaml
+++ b/models/siliconflow/models/llm/glm4-9b-chat.yaml
@@ -3,7 +3,9 @@ label:
   en_US: THUDM/glm-4-9b-chat
 model_type: llm
 features:
+  - multi-tool-call
   - agent-thought
+  - stream-tool-call
 model_properties:
   mode: chat
   context_size: 32768
