feat: ComfyUI 0.1.0 Update (#914)
* add list_models node

* add img2img node

* rename stable_diffusion node to txt2img

* add img2img.json

* register txt2img, img2img and list_models node

* bugfix

* add depth_anything and depth_pro

* Merge pull request #2 from yt-koike/2vid

add img2img and img2vid

* verify samplers and schedulers

* refactor

* refactor

* prompt installing depth related plugins on ComfyUI

* version up dify_plugin

* add ja_JP

* tune img2vid

* add face_swap feature

* add install prompt

* bugfix & add ja_JP translations

* refactor

* add translation

* bump: comfyui to 0.0.9

* format fix

* add upscale feature

* Merge list_upscalers to list_models

* add downloaders

* refactor

* add list LORAs

* change output name

* variable length LORAs

* add localisation

* add localisation and errors

* update README.md

* fix urls in README.md

* small edit on README.md

* shrink AIR.png

* raise Errors instead of text messages

* bugfix when empty LORAs

--- a/tools/comfyui/tools/comfyui_face_swap.yaml
+++ b/tools/comfyui/tools/comfyui_face_swap.yaml
@@ -1,10 +1,7 @@
 description:
   human:
-    en_US:
-      Face swap. Infuses a face on the second image to the first image.
-    pt_BR:
-      Face swap. Infuses a face on the second image to the first image.
-    zh_Hans: 换脸。将第二张图片上的人脸注入第一张图片。
+    en_US: Face swap. Extracts a face on the first image and infuses it to the second image.
+    zh_Hans: 换脸。提取第一张图像上的人脸，并将其注入第二张图像。
     ja_JP: 1枚目に写った顔を2枚目の画像に写します．
   llm: swap faces
 extra:
@@ -14,7 +11,6 @@ identity:
   author: yt-koike
   label:
     en_US: FaceSwap
-    pt_BR: FaceSwap
     zh_Hans: FaceSwap
     ja_JP: FaceSwap
   name: face_swap
@@ -26,8 +22,7 @@ parameters:
       en_US: Input Image
       zh_Hans: 输入的图片
       ja_JP: 入力画像
-    llm_description:
-      The input images. If input is array of image, the first two will be used.
+    llm_description: The input images. If input is array of image, the first two will be used.
     human_description:
       en_US: The input image. If input is array of image, the first one will be used.
       zh_Hans: 输入的图片。如果输入是图像数组，将使用第一个图像。
