--- a/tools/comfyui/provider/comfyui.yaml
+++ b/tools/comfyui/provider/comfyui.yaml
@@ -9,14 +9,14 @@ credentials_for_provider:
     required: true
     type: text-input
     url: https://docs.dify.ai/guides/tools/tool-configuration/comfyui
-  image_server_url:
+  civitai_api_key:
     label:
-      en_US: The URL of Dify API endpoint 
-      zh_Hans: The URL of Dify API endpoint 
+      en_US: CivitAI API Key
+      zh_Hans: CivitAI API Key
     placeholder:
-      en_US: Please input your API endpoint. For example, https://app.dify.ai:8080
-      zh_Hans: 请输入你的 API endpoint 例子 https://app.dify.ai:8080
-    required: true
+      en_US: Please input your CivitAI API Key
+      zh_Hans: 请输入你的 CivitAI API Key
+    required: false
     type: text-input
 extra:
   python:
@@ -44,5 +44,6 @@ tools:
 - tools/comfyui_face_swap.yaml
 - tools/comfyui_list_models.yaml
 - tools/comfyui_list_samplers.yaml
-- tools/comfyui_list_upscalers.yaml
 - tools/comfyui_image_info.yaml
+- tools/download_civitai.yaml
+- tools/download_huggingface.yaml
