Solution for Issue #927: Email File Attachment Error #ieeesoc (#928)
* main.py

* send_mail.py

* manifest.yaml

--- a/tools/email/manifest.yaml
+++ b/tools/email/manifest.yaml
@@ -1,34 +1,148 @@
-author: langgenius
-created_at: '2024-09-20T08:03:44.658609186Z'
-description:
-  en_US: send email through smtp protocol
-  zh_Hans: 通过smtp协议发送电子邮件
-icon: icon.svg
-label:
-  en_US: email
-  zh_Hans: 电子邮件
-meta:
-  arch:
-  - amd64
-  - arm64
-  runner:
-    entrypoint: main
-    language: python
-    version: '3.12'
-  version: 0.0.1
+# Add this to manifest.yaml or update the existing manifest
+# If the file is manifest.json, convert this to JSON format
+
 name: email
-plugins:
-  tools:
-    - provider/email.yaml
-resource:
-  memory: 1048576
-  permission:
-    model:
-      enabled: true
-      llm: true
-    tool:
-      enabled: true
-tags:
-  - utilities
-type: plugin
-version: 0.0.7
+label: Email
+version: 0.0.8  # Increment the version number
+description: Send emails with or without attachments
+author: Dify Team
+authorization:
+  type: none  # or oauth2 if applicable
+
+models:
+  - name: gpt-3.5-turbo
+
+env:
+  - name: SMTP_HOST
+    type: string
+    required: true
+    label: SMTP Host
+    default: ""
+    placeholder: "e.g., smtp.gmail.com"
+    help: "SMTP server host"
+
+  - name: SMTP_PORT
+    type: number
+    required: true
+    label: SMTP Port
+    default: 587
+    placeholder: "e.g., 587"
+    help: "SMTP server port"
+
+  - name: SMTP_USERNAME
+    type: string
+    required: true
+    label: SMTP Username
+    default: ""
+    placeholder: "e.g., your.email@gmail.com"
+    help: "SMTP server username"
+
+  - name: SMTP_PASSWORD
+    type: password
+    required: true
+    label: SMTP Password
+    default: ""
+    placeholder: "Your SMTP password"
+    help: "SMTP server password or app password"
+
+  - name: SMTP_USE_TLS
+    type: boolean
+    required: false
+    label: Use TLS
+    default: true
+    help: "Whether to use TLS for SMTP connection"
+
+  - name: SMTP_FROM_EMAIL
+    type: string
+    required: true
+    label: From Email
+    default: ""
+    placeholder: "e.g., your.email@gmail.com"
+    help: "Email address to send from"
+
+  - name: SMTP_FROM_NAME
+    type: string
+    required: true
+    label: From Name
+    default: ""
+    placeholder: "e.g., Your Name"
+    help: "Name to display in From field"
+
+endpoints:
+  # Keep any existing endpoints
+  
+  # Add or update the send_email endpoint
+  - name: send_email
+    description: Send an email
+    parameters:
+      - name: to
+        type: string
+        required: true
+        label: To
+        help: "Recipient email address(es), comma separated for multiple recipients"
+      
+      - name: subject
+        type: string
+        required: true
+        label: Subject
+        help: "Email subject"
+      
+      - name: body
+        type: string
+        required: true
+        label: Body
+        help: "Email body content (HTML supported)"
+      
+      - name: cc
+        type: string
+        required: false
+        label: CC
+        help: "Carbon copy recipients, comma separated"
+      
+      - name: bcc
+        type: string
+        required: false
+        label: BCC
+        help: "Blind carbon copy recipients, comma separated"
+    
+  # Add the new endpoint for sending emails with attachments
+  - name: send_email_with_attachments
+    description: Send an email with file attachments
+    parameters:
+      - name: to
+        type: string
+        required: true
+        label: To
+        help: "Recipient email address(es), comma separated for multiple recipients"
+      
+      - name: subject
+        type: string
+        required: true
+        label: Subject
+        help: "Email subject"
+      
+      - name: body
+        type: string
+        required: true
+        label: Body
+        help: "Email body content (HTML supported)"
+      
+      - name: attachments
+        type: array
+        items:
+          type: string
+        required: false
+        label: Attachments
+        help: "List of file paths to attach to the email"
+      
+      - name: cc
+        type: string
+        required: false
+        label: CC
+        help: "Carbon copy recipients, comma separated"
+      
+      - name: bcc
+        type: string
+        required: false
+        label: BCC
+        help: "Blind carbon copy recipients, comma separated"
