Feat: add vision features to OpenAI o3, o4-mini Models (#910)
* feat: add openai-model o3 to vision feature

* feat: add openai-model o4-mini to vision feature

* docs: add comment to o3-mini
not supported vison features

* chore: bump version to 0.0.23 in OpenAI plugin

--- a/models/openai/models/llm/o3-mini.yaml
+++ b/models/openai/models/llm/o3-mini.yaml
@@ -5,6 +5,8 @@ label:
 model_type: llm
 features:
   - agent-thought
+  # ! vision features is not supported in OpenAI o3-mini
+  # https://platform.openai.com/docs/models/o3-mini
 model_properties:
   mode: chat
   context_size: 200000
