Feat&fix: ComfyUI 0.1.1 update (#948)
* add list_models node

* add img2img node

* rename stable_diffusion node to txt2img

* add img2img.json

* register txt2img, img2img and list_models node

* bugfix

* add depth_anything and depth_pro

* Merge pull request #2 from yt-koike/2vid

add img2img and img2vid

* verify samplers and schedulers

* refactor

* refactor

* prompt installing depth related plugins on ComfyUI

* version up dify_plugin

* add ja_JP

* tune img2vid

* add face_swap feature

* add install prompt

* bugfix & add ja_JP translations

* refactor

* add translation

* bump: comfyui to 0.0.9

* format fix

* add upscale feature

* Merge list_upscalers to list_models

* add downloaders

* refactor

* add list LORAs

* change output name

* variable length LORAs

* add localisation

* add localisation and errors

* update README.md

* fix urls in README.md

* small edit on README.md

* shrink AIR.png

* raise Errors instead of text messages

* bugfix when empty LORAs

* optionalize CivitAI model version

* rename files

* fix:workflow

* Update comfyui.yaml

* bugfix

* token support for Huggingface

* Update README.md

* Update README.md

* Update download_civitai.yaml

* Change error messages

--- a/tools/comfyui/provider/comfyui.yaml
+++ b/tools/comfyui/provider/comfyui.yaml
@@ -18,6 +18,15 @@ credentials_for_provider:
       zh_Hans: 请输入你的 CivitAI API Key
     required: false
     type: text-input
+  hf_api_key:
+    label:
+      en_US: Hugging Face API Key
+      zh_Hans: Hugging Face API Key
+    placeholder:
+      en_US: Please input your Hugging Face API Key
+      zh_Hans: 请输入你的 Hugging Face API Key
+    required: false
+    type: text-input
 extra:
   python:
     source: provider/comfyui.py
@@ -32,18 +41,18 @@ identity:
     zh_Hans: ComfyUI
   name: comfyui
   tags:
-  - image
+    - image
 tools:
-- tools/comfyui_workflow.yaml
-- tools/comfyui_txt2img.yaml
-- tools/comfyui_img2img.yaml
-- tools/comfyui_img2vid.yaml
-- tools/comfyui_upscale.yaml
-- tools/comfyui_depth_anything.yaml
-- tools/comfyui_depth_pro.yaml
-- tools/comfyui_face_swap.yaml
-- tools/comfyui_list_models.yaml
-- tools/comfyui_list_samplers.yaml
-- tools/comfyui_image_info.yaml
-- tools/download_civitai.yaml
-- tools/download_huggingface.yaml
+  - tools/workflow.yaml
+  - tools/txt2img.yaml
+  - tools/img2img.yaml
+  - tools/img2vid.yaml
+  - tools/upscale.yaml
+  - tools/depth_anything.yaml
+  - tools/depth_pro.yaml
+  - tools/face_swap.yaml
+  - tools/list_models.yaml
+  - tools/list_samplers.yaml
+  - tools/image_info.yaml
+  - tools/download_civitai.yaml
+  - tools/download_huggingface.yaml
