--- a/models/gemini/models/llm/_position.yaml
+++ b/models/gemini/models/llm/_position.yaml
@@ -1,5 +1,6 @@
 - gemini-2.5-pro-preview-05-06
 - gemini-2.5-pro-preview-03-25
+- gemini-2.5-flash-preview-05-20
 - gemini-2.5-flash-preview-04-17
 - gemini-2.0-flash-exp
 - gemini-2.0-flash
