--- a/models/gemini/models/llm/gemini-2.5-pro-preview-05-06.yaml
+++ b/models/gemini/models/llm/gemini-2.5-pro-preview-05-06.yaml
@@ -9,6 +9,8 @@ features:
   - tool-call
   - stream-tool-call
   - document
+  - video
+  - audio
 model_properties:
   mode: chat
   context_size: 1048576
